# cf-integrity

./: CMakeLists.txt  Dockerfile  protect.sh  protect_c_snake.sh  protect_snake.sh  protect_tetris.sh  protect_zopfli.sh  rerun.sh  run_snake.sh  run_tetris.sh
whitelist/: .Hello.cpp.swp  .WhiteList.cpp.swp  CMakeLists.txt  WhiteList.cpp  graph.cpp  sample.c  snippet.c  snippet.cpp  whitelist.cpp
